# screen-timing-board

./: .editorconfig  .envrc  .gitignore  .latexmkrc  .pre-commit-config.yaml  README.md  deploy.yml  manual.tex  mypy.ini  pyproject.toml  test.py  timing_board.py
roles/default/handlers/: main.yml
roles/default/tasks/: main.yml
roles/default/templates/: .xsession.j2
roles/default/vars/: main.yml
