[tool.poetry]
name = "screen-timing-board"
version = "0.1.0"
description = "Screen-based timing board"
authors = ["Arnaud Rocher <arnaud.roche3@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Pillow = "^6.0"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
ipython = "^7.5"
flake8-comprehensions = "^2.1"
pep8-naming = "^0.8.2"
flake8 = "^3.7"
flake8-bugbear = "^19.3"
isort = "^4.3"
rope = "^0.14.0"
black = {version = "^18.3-alpha.0",allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
